# SKlearn_to_MLFLow

./: .dockerignore  Dockerfile  README.md  general_training.py  pyproject.toml  training_config.yaml  training_config_polymer.yaml
catch_mlflow_model/: dump_mlflow_model_config.yaml  mlflow_model_catch.py
catch_mlflow_model/experimental/: mlflow_model_catch.py
data/: ChemicalManufacturingProcess.csv  ChemicalManufacturingProcess.parquet  Filtered_Data.parquet  Filtered_Data2.parquet  csv_to_parquet.py
docker_train_model/: How_to_run_docker_training.md  How_to_setup_docker_container_locally.txt
experimental/: working_with_mlfow.py
filter/: filter.py  filter_config.yaml
how_to_dump_MLFlow_models/: dump_mlflow_model.py  dump_mlflow_model_config.yaml
model/: general_training.py  training_config.yaml  training_config_polymer.yaml  training_config_rusted.yaml
model_dump/chemical_model/: MLmodel  feature_limits.json  model.pkl
model_dump/secondmodel/: feature_dtypes.json  feature_limits.json
