[tool.poetry]
name = "ldopa"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna"]


[tool.poetry.dependencies]
python = ">=3.8.4, <3.9"
pandas = "^1.3.4"
numpy = "^1.21.3"
plotly = "^5.3.1"

mlflow = "^1.21.0"


azure-storage-blob = "== 12.7.1"
azure-identity ="*"
#cryptography = "^35.0.0"   # aus irgentwelchen gruenden ist das auf ubuntu20.04 gerade nicht möglich

PyYAML = "^6.0"
pyarrow = "^6.0.0"
sklearn = "*"

python-dotenv = "^0.19.1"



[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"


[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
